--- a/README
+++ b/README
@@ -1,8 +1,19 @@
-Medialist Plugin for DokuWiki
+MediaList Plugin for DokuWiki
 
 All documentation for the Medialist Plugin is available online at:
 
   * http://dokuwiki.org/plugin:medialist
 
 (c) 2005 - 2009 by Michael Klier <chi@chimeric.de>
+(c) 2016        by Satoshi Sahara <sahara.satoshi@gmail.com
+
+This program is free software; you can redistribute it and/or modify
+it under the terms of the GNU General Public License as published by
+the Free Software Foundation; version 2 of the License
+
+This program is distributed in the hope that it will be useful,
+but WITHOUT ANY WARRANTY; without even the implied warranty of
+MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+GNU General Public License for more details.
+
 See COPYING for license info.
